Fix spacing and sizing issues in Locations section

--- a/src/components/Location.css
+++ b/src/components/Location.css
@@ -14,6 +14,13 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
+    width: 100%;
+    gap: 4rem;
+}
+
+.location-list * {
+    flex-grow: 1;
+    border-radius: 10px;
 }
 
 .location-info {
